Fix for wrong height calculations that make scrollbars appear when not needed

--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ color: #000;
 
 
 #attributepane .text {
-	height:100%;
+	height:90%;
 	overflow-y: scroll;
 }
 
